ves-middle/tests/t3_test_globals_are_forward_declared.test
fn mutually_recursive1(a) {
    mutually_recursive2("ok")
}
fn mutually_recursive2(a) { 
    mutually_recursive1("ok")
}


print(global, "error")
mut global
print(global, "ok")

%output

error: Attempted to use the variable `global` before its declaration
   ┌─ <source: #879628b2a9f5644f>:9:7
   │
 9 │ print(global, "error")
   │       ^^^^^^
10 │ mut global
   │     ------ First declared on line 10
